fix video overflow

--- a/src/app/components/Dashboard/VideoPanel/style.scss
+++ b/src/app/components/Dashboard/VideoPanel/style.scss
@@ -1,10 +1,21 @@
 .Modal {
+  .modal-inner {
+    overflow: hidden;
+    padding: 1rem 0;
+
+    .modal-body {
+      padding: 0 1rem;
+      height: 100%;
+    }
+  }
+
   .VideoPanel {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100%;
+    overflow: hidden;
 
     img {
       display: inline-block;
